--- a/Perez-Alcantara_CV.tex
+++ b/Perez-Alcantara_CV.tex
@@ -207,12 +207,31 @@
 
 \section{Other activities}
 
- \textbullet{} Organiser of \textbf{postgraduate student presentation sessions}: October 2015 - October 2016
+ \textbullet{} Organiser of postgraduate student presentation sessions: October 2015 - October 2016
  
   \textbullet{} Elected member of Amnesty International Spain, International Affairs Committee: May 2013 - May 2015
   
   \textbullet{} Coordinator of Amnesty International local volunteer group, Seville branch: October 2014 - August 2015
  
+\sectionspace 
+
+
+\section{References}
+
+\descript{Prof. Mark McCarthy}
+
+\href{mccarthy.mark@gene.com}{\textbf{mccarthy.mark@gene.com}} \\
+Senior Director, Human Genetics, Genentech \\
+340 Point San Bruno Blvd, South San Francisco, CA 94080\\
+\smallsectionspace
+
+\descript{Prof. Ben Davies}
+
+\href{ben@well.ox.ac.uk}{\textbf{ben@well.ox.ac.uk}} \\
+PI, Transgenic Technology Research Group \\
+Wellcome Centre for Human Genetics, Roosevelt Drive, Oxford OX3 7BN, UK \\
+\smallsectionspace
+
 \sectionspace 
 \end{minipage} 
 \end{document}
